# homebrew-tap

./: LICENSE  README.md  pyproject.toml  ritual_cli.py
Formula/: ritual-phpstan.rb  ritual.rb
